# GitChat

./: .gitignore  CMakeLists.txt  Git.cpp  Git.h  GitChat.cpp  GitChat.h  GitChat.ui  GitChatConfig.cpp  GitChatConfig.h  GitChatConfig.ui  LICENSE  ListViewDelegate.cpp  ListViewDelegate.h  README.md  main.cpp  thread_safe_queue.hpp
